--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Font */
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 /* Variables */
 
@@ -9,13 +9,43 @@
 }
 
 body {
-	background: #fafafa;
-	font-family: "Roboto", sans-serif;
+	background: rgb(161, 100, 223);
+	font-family: "Poppins", sans-serif;
 	display: flex;
-	flex-direction: column;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
+	text-align: center;
 	min-height: 100vh;
 	overflow: hidden;
 	margin: 0;
+}
+
+.btn {
+	background: rebeccapurple;
+	border-radius: 5px;
+	border: none;
+	color: #fff;
+	margin: 1rem;
+	padding: 1.5rem 3rem;
+	font-size: 1.2rem;
+	font-family: inherit;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
+	cursor: pointer;
+}
+
+.btn:hover, .btn:focus {
+	opacity: 0.9;
+	transform: scale(0.98);
+	-webkit-transform: scale(0.98);
+	-moz-transform: scale(0.98);
+	-ms-transform: scale(0.98);
+	-o-transform: scale(0.98);
+}
+
+.btn:focus {
+	outline: none;
 }
